objects/nCHECK__Grading_Step__mdt.object
<CustomObject>
    <description>An individual step inside an exercise for the Grading component to check. Looks up to a Grading Exercise Metadata record.</description>
    <fields>
        <fullName>nCHECK__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCHECK__Controlling_Value__c</fullName>
        <inlineHelpText>For Dependent Picklists, this is the Controlling Value from the Main Field</inlineHelpText>
        <label>Controlling Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Criteria_Values__c</fullName>
        <description>Additional criteria values</description>
        <label>Criteria Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Criteria__c</fullName>
        <description>Additional criteria</description>
        <label>Criteria</label>
        <metadataRelationshipControllingField>nCHECK__Grading_Step__mdt.nCHECK__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Grading_Steps2</relationshipLabel>
        <relationshipName>Grading_Steps2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Dependent_Field__c</fullName>
        <inlineHelpText>Use when checking Dependent Picklists, this is the Dependent Field</inlineHelpText>
        <label>Dependent Field</label>
        <metadataRelationshipControllingField>nCHECK__Grading_Step__mdt.nCHECK__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Grading_Steps1</relationshipLabel>
        <relationshipName>Grading_Steps1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Exercise_Filter__c</fullName>
        <label>Exercise Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Field__c</fullName>
        <label>Main Field</label>
        <metadataRelationshipControllingField>nCHECK__Grading_Step__mdt.nCHECK__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Grading_Steps</relationshipLabel>
        <relationshipName>Grading_Steps</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Grading_Exercise__c</fullName>
        <label>Grading Exercise</label>
        <referenceTo>nCHECK__Grading_Exercise__mdt</referenceTo>
        <relationshipLabel>Grading Steps</relationshipLabel>
        <relationshipName>Grading_Steps</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Metadata_Object__c</fullName>
        <label>Metadata Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Grading_Steps</relationshipLabel>
        <relationshipName>Grading_Steps</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Parameter1_Values__c</fullName>
        <label>Parameter1 Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Parameter1__c</fullName>
        <label>Parameter1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Parameter_Values__c</fullName>
        <label>Parameter Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Parameter__c</fullName>
        <label>Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Step__c</fullName>
        <label>Step #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nCHECK__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check Picklist Values</fullName>
                    <default>true</default>
                    <label>Check Picklist Values</label>
                </value>
                <value>
                    <fullName>Check Dependent Picklist Values</fullName>
                </value>
                <value>
                    <fullName>RBC Validation</fullName>
                </value>
                <value>
                    <fullName>Check Metadata</fullName>
                </value>
                <value>
                    <fullName>Approval History</fullName>
                </value>
                <value>
                    <fullName>Field Set</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCHECK__Values__c</fullName>
        <inlineHelpText>Comma separated list of values. For Dependent Picklists, these are the list of Dependent Values</inlineHelpText>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grading Step</label>
    <listViews>
        <fullName>nCHECK__Full_View</fullName>
        <columns>nCHECK__Grading_Exercise__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>nCHECK__Type__c</columns>
        <columns>nCHECK__Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Grading Steps</pluralLabel>
</CustomObject>